# csv-analyzer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  cicd-comparison.md  git-workflow.md
src/csv_analyzer/: cli.py  reader.py  stats.py
tests/integration/: test_cli.py
tests/unit/: test_reader.py  test_stats.py
