[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-analyzer"
version = "1.0.0"
description = "CSV ticket analyzer CLI"
requires-python = ">=3.10"
dependencies = []
optional-dependencies = {dev = ["pytest", "black", "isort", "pre-commit"]}