[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-analyzer"
version = "1.0.0"
description = "CSV ticket analyzer CLI"
requires-python = ">=3.10"
dependencies = []
[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black==23.11.0", "isort==5.12.0", "pre-commit"]

[tool.black]
target-version = ['py310']